# axum_scaffold

./: .env  .gitignore  Cargo.toml  README.md  configuration.yaml  notes.md
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
