[package]
name = "zero2axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2axum"

[dependencies]
anyhow = "1.0.75"
axum = "0.7.1"
chrono = "0.4.31"
config = "0.13.3"
hyper = { version = "0.14.27", features = ["server"] }
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"]}
unicode-segmentation = "1.11.0"
uuid = { version = "1.6.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]
